Enable Discovery Service

--- a/LMA-api/src/main/resources/application.properties
+++ b/LMA-api/src/main/resources/application.properties
@@ -4,3 +4,13 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 management.security.enabled= true
+server.port=8090
+
+
+spring.application.name=auth-service
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:6060/eureka/
+hystrix.command.default.execution.timeout.enabled=false
+spring.main.allow-bean-definition-overriding=true
