--- a/Loan-api/src/main/resources/application.properties
+++ b/Loan-api/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/lmadb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
+server.port=8081
+spring.application.name=loan-service
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:6060/eureka/
+#management.security.enabled=false
+#security.basic.enabled=false
+hystrix.command.default.execution.timeout.enabled=false
