--- a/Borrower-api/src/main/resources/application.properties
+++ b/Borrower-api/src/main/resources/application.properties
@@ -13,5 +13,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:6060/eureka/
 #management.security.enabled=false
 #security.basic.enabled=false
 hystrix.command.default.execution.timeout.enabled=false
+spring.main.allow-bean-definition-overriding=true
 
 
