--- a/Loan-api/src/main/resources/application.properties
+++ b/Loan-api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-server.port=8081
+server.port=8088
 spring.application.name=loan-service
 eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
@@ -13,3 +13,4 @@ eureka.client.serviceUrl.defaultZone=http://localhost:6060/eureka/
 #management.security.enabled=false
 #security.basic.enabled=false
 hystrix.command.default.execution.timeout.enabled=false
+spring.main.allow-bean-definition-overriding=true
