--- a/Property-api/src/main/resources/application.properties
+++ b/Property-api/src/main/resources/application.properties
@@ -13,3 +13,4 @@ eureka.client.serviceUrl.defaultZone=http://localhost:6060/eureka/
 #management.security.enabled=false
 #security.basic.enabled=false
 hystrix.command.default.execution.timeout.enabled=false
+spring.main.allow-bean-definition-overriding=true
