--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -10,22 +10,30 @@ hystrix.command.default.execution.timeout.enabled=false
 
 zuul.prefix = /api
 
-# loan service config
-#zuul.routes.loan-service.url = http://localhost:8081
-#zuul.routes.loan-service.path = /**
-#zuul.routes.loan-service.serviceId = loan-service
-#
-## borrower service config
-#zuul.routes.borrower-service.url = http://localhost:8082
-#zuul.routes.borrower-service.path = /**
-#zuul.routes.borrower-service.serviceId = borrower-service
-
 # auth service config
-zuul.routes.auth-service.url = http://localhost:8090
+zuul.routes.auth-service.url = http://localhost:8081
 zuul.routes.auth-service.path = /**
 zuul.routes.auth-service.serviceId = auth-service
 
+# borrower service config
+zuul.routes.borrower-service.url = http://localhost:8082
+zuul.routes.borrower-service.path = /**
+zuul.routes.borrower-service.serviceId = borrower-service
 
+# legaldocument service config
+zuul.routes.legaldocument-service.url = http://localhost:8083
+zuul.routes.legaldocument-service.path = /**
+zuul.routes.legaldocument-service.serviceId = legaldocument-service
+
+# loan service config
+zuul.routes.loan-service.url = http://localhost:8084
+zuul.routes.loan-service.path = /**
+zuul.routes.loan-service.serviceId = loan-service
+
+# property service config
+zuul.routes.property-service.url = http://localhost:8084
+zuul.routes.property-service.path = /**
+zuul.routes.property-service.serviceId = property-service
 
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds= 1000000
